--- a/index.html
+++ b/index.html
@@ -1,22 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NLW Agents</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <img src="./assets/logo.png" alt="Logo esports NLW" />
+      <img src="./assets/logo.png" alt="Logo esports NLW" />
     </header>
 
-
     <main>
-        <section>
-            <h2>Assistente de Meta</h2>
-            <p>Pergunte sobre estratégias, builds e dicas para seus jogos</p>
-        </section>
+      <section>
+        <div>
+          <h2>Assistente de Meta</h2>
+          <p>Pergunte sobre estratégias, builds e dicas para seus jogos</p>
+
+          <form id="form">
+            <input id="apiKey" type="password" placeholder="Informe a API Key do Gemini" required/>
+
+            <select id="gameSelect">
+              <option value="">Selecione um jogo</option>
+              <option value="valorant">Valorant</option>
+              <option value="lol">League of Legends</option>
+              <option value="brawl">Brawl Stars</option>
+            </select>
+
+            <input id="questionInput" type="text" placeholder="Ex: Como jogar de Jett no Valorant?" required/>
+            <button id="askButton">
+              Perguntar ao Gemini
+            </button>
+          </form>
+
+          <div id="aiResponse">
+            <div class="response-content">
+
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+    <script src="./script.js"></script>
+  </body>
 </html>
