--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <option value="">Selecione um jogo</option>
               <option value="valorant">Valorant</option>
               <option value="lol">League of Legends</option>
-              <option value="brawl">Brawl Stars</option>
+              <option value="tft">Teamfight Tactics</option>
             </select>
 
             <input id="questionInput" type="text" placeholder="Ex: Como jogar de Jett no Valorant?" required/>
@@ -39,7 +39,7 @@
             </button>
           </form>
 
-          <div id="aiResponse">
+          <div id="aiResponse" class="hidden">
             <div class="response-content">
 
             </div>
@@ -47,6 +47,7 @@
         </div>
       </section>
     </main>
+    <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
